--- a/src/app/components/city-panel/city-panel.component.html
+++ b/src/app/components/city-panel/city-panel.component.html
@@ -4,7 +4,8 @@
       <h2>{{ city.name }}</h2>
       <p>Population: {{ city.population }} {{ city.idlePopulation > 0 ? "(" + city.idlePopulation + " Idle)" : "" }}</p>
       <p>Food Output: {{city.expectedDailyFoodOutput}}, Daily Citizen Food Cost: {{city.population}}</p>
-      <p>Net Food: {{city.expectedDailyFoodChange}}, Expected Yearly Pop Gain: {{city.expectedYearlyPopGrowth}}</p>
+      <p>Food to Next Worker: {{city.currentFoodFloat}}({{city.expectedDailyFoodChange >= 0 ? "+" : "-"}}{{city.expectedDailyFoodChange}})/{{city.nextPopulationCost}}</p>
+      <p>Expected Monthly Pop Gain: {{city.expectedMonthlyPopGrowth}}</p>
     </div>
     <div class="profession-list">
       <div class="profession-card" *ngFor="let building of city.buildings">
