Cleaned up max worker display for buildings Updated the auto-upgrade to only upgrade multiple times if there are idle workers to fill the slots Fixed the priority index for buildings to not allow duplicate numbers

--- a/src/app/components/city-panel/city-panel.component.html
+++ b/src/app/components/city-panel/city-panel.component.html
@@ -33,7 +33,7 @@
         </div>
         <div class="profession-controls">
           <button (click)="adjustWorkers(city, building, 'decrease')">-</button>
-          <span style="margin: 3px; text-align: center">{{ building.workers }} Pop<br>{{ building.workers == building.maxWorkers ? "Max" : "" }}</span>
+          <span style="margin: 3px; text-align: center">{{ building.workers }}/ {{ building.maxWorkers}} Workers</span>
           <button (click)="adjustWorkers(city, building, 'increase')">+</button>
         </div>
         <div class="upgrade-button">
